Carly_Michael/jectacular-ql/src/parser/qls-parser.ts
// tslint:disable:quotemark

// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.1.13 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

/* tslint:disable */ 
 import * as astQls from '../app/domain/ast/qls/index';
 import {IntQuestionType, BooleanQuestionType, StringQuestionType, DateQuestionType} from '../app/domain/ast/question-type'
export class SyntaxError extends Error {
  public static buildMessage(expected: string, found: string) {
    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) => {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any(): string {
        return "any character";
      },

      end(): string {
        return "end of input";
      },

      other(expectation): string {
        return expectation.description;
      }
    };

    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected1) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: string;
  public found: string;
  public location: any;
  public name: string;

  constructor(message: string, expected: string, found: string, location) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions = { stylesheet: peg$parsestylesheet };
  let peg$startRuleFunction = peg$parsestylesheet;

  const peg$c0 = "stylesheet";
  const peg$c1 = peg$literalExpectation("stylesheet", false);
  const peg$c2 = "\"";
  const peg$c3 = peg$literalExpectation("\"", false);
  const peg$c4 = "{";
  const peg$c5 = peg$literalExpectation("{", false);
  const peg$c6 = "}";
  const peg$c7 = peg$literalExpectation("}", false);
  const peg$c8 = function(name, pages) {
                            return new astQls.Stylesheet(name, pages, location());
                          };
  const peg$c9 = "page";
  const peg$c10 = peg$literalExpectation("page", false);
  const peg$c11 = function(name, sections, d) {
                            return new astQls.Page(name, sections, location(), d);
                          };
  const peg$c12 = function(name, sections) {
                            return new astQls.Page(name, sections, location());
                          };
  const peg$c13 = "section";
  const peg$c14 = peg$literalExpectation("section", false);
  const peg$c15 = function(name, questions, sections, d) {
                            return new astQls.Section(name, sections, questions, location(), d);
                          };
  const peg$c16 = function(name, questions, sections) {
                            return new astQls.Section(name, sections, questions, location());
                          };
  const peg$c17 = function(name, question) {
                            return new astQls.Section(name, [], [question], location());
                          };
  const peg$c18 = "question";
  const peg$c19 = peg$literalExpectation("question", false);
  const peg$c20 = function(name, type) {
                            return new astQls.QlsQuestion(name, type, location());
                          };
  const peg$c21 = function(name) {
                            return new astQls.QlsQuestion(name, new astQls.Widget(astQls.WidgetType.NONE, []), location());
                          };
  const peg$c22 = "default";
  const peg$c23 = peg$literalExpectation("default", false);
  const peg$c24 = function(type, styles, widget) {
                            return new astQls.DefaultStyling(type, widget, styles, location());
                          };
  const peg$c25 = function(type, widget) {
                            return new astQls.DefaultStyling(type, widget, [], location());
                          };
  const peg$c26 = "widget";
  const peg$c27 = peg$literalExpectation("widget", false);
  const peg$c28 = function(type) {
                            return type;
                          };
  const peg$c29 = ":";
  const peg$c30 = peg$literalExpectation(":", false);
  const peg$c31 = function(name, value) {
                            return new astQls.Style(name, value, location());
                          };
  const peg$c32 = function() {return text();};
  const peg$c33 = /^[ \t\n\r]/;
  const peg$c34 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  const peg$c35 = function() {return;};
  const peg$c36 = /^[a-zA-Z0-9\-]/;
  const peg$c37 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-"], false, false);
  const peg$c38 = /^[a-zA-Z0-9 +\-\/*><=]/;
  const peg$c39 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], " ", "+", "-", "/", "*", ">", "<", "="], false, false);
  const peg$c40 = "//";
  const peg$c41 = peg$literalExpectation("//", false);
  const peg$c42 = peg$anyExpectation();
  const peg$c43 = "\n";
  const peg$c44 = peg$literalExpectation("\n", false);
  const peg$c45 = "\r\n";
  const peg$c46 = peg$literalExpectation("\r\n", false);
  const peg$c47 = "\r";
  const peg$c48 = peg$literalExpectation("\r", false);
  const peg$c49 = "\u2028";
  const peg$c50 = peg$literalExpectation("\u2028", false);
  const peg$c51 = "\u2029";
  const peg$c52 = peg$literalExpectation("\u2029", false);
  const peg$c53 = /^[0-9]/;
  const peg$c54 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c55 = function(val) {return new astQls.NumberValue(parseInt(text(), 10));};
  const peg$c56 = "#";
  const peg$c57 = peg$literalExpectation("#", false);
  const peg$c58 = function(r, g, b) {
                      const parsedRed = parseInt(r[0] + r[1], 10);
                      const parsedGreen = parseInt(g[0] + g[1], 10);
                      const parsedBlue = parseInt(b[0] + b[1], 10);
                      return new astQls.RgbValue(parsedRed, parsedGreen, parsedBlue);
                    };
  const peg$c59 = /^[a-zA-Z0-9:?\\\/.,;!]/;
  const peg$c60 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], ":", "?", "\\", "/", ".", ",", ";", "!"], false, false);
  const peg$c61 = /^[a-zA-Z]/;
  const peg$c62 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  const peg$c63 = function() {return new astQls.StringValue(text());};
  const peg$c64 = "boolean";
  const peg$c65 = peg$literalExpectation("boolean", false);
  const peg$c66 = function() { return new BooleanQuestionType(); };
  const peg$c67 = "string";
  const peg$c68 = peg$literalExpectation("string", false);
  const peg$c69 = function() { return new StringQuestionType(); };
  const peg$c70 = "integer";
  const peg$c71 = peg$literalExpectation("integer", false);
  const peg$c72 = function() { return new IntQuestionType(); };
  const peg$c73 = "date";
  const peg$c74 = peg$literalExpectation("date", false);
  const peg$c75 = function() { return new DateQuestionType(); };
  const peg$c76 = "radio";
  const peg$c77 = peg$literalExpectation("radio", false);
  const peg$c78 = "(\"";
  const peg$c79 = peg$literalExpectation("(\"", false);
  const peg$c80 = "\",";
  const peg$c81 = peg$literalExpectation("\",", false);
  const peg$c82 = "\")";
  const peg$c83 = peg$literalExpectation("\")", false);
  const peg$c84 = function(yesValue, noValue) {
                      return new astQls.Widget(astQls.WidgetType.RADIO, [yesValue, noValue]);
                    };
  const peg$c85 = "text";
  const peg$c86 = peg$literalExpectation("text", false);
  const peg$c87 = function() { return new astQls.Widget(astQls.WidgetType.TEXT); };
  const peg$c88 = "checkbox";
  const peg$c89 = peg$literalExpectation("checkbox", false);
  const peg$c90 = function() { return new astQls.Widget(astQls.WidgetType.CHECKBOX); };
  const peg$c91 = "spinbox";
  const peg$c92 = peg$literalExpectation("spinbox", false);
  const peg$c93 = function() { return new astQls.Widget(astQls.WidgetType.SPINBOX); };
  const peg$c94 = "dropdown";
  const peg$c95 = peg$literalExpectation("dropdown", false);
  const peg$c96 = function(yesValue, noValue) {
                      return new astQls.Widget(astQls.WidgetType.DROPDOWN, [yesValue, noValue]);
                    };
  const peg$c97 = "slider";
  const peg$c98 = peg$literalExpectation("slider", false);
  const peg$c99 = function() { return new astQls.Widget(astQls.WidgetType.SLIDER); };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  const peg$resultsCache = {};

  let peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean) {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase: boolean) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message, location1) {
    return new SyntaxError(message, "", "", location1);
  }

  function peg$buildStructuredError(expected1, found, location1) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsestylesheet() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    const key = peg$currPos * 41 + 0;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsewhitespace();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsecomment();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsecomment();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsewhitespace();
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 10) === peg$c0) {
            s4 = peg$c0;
            peg$currPos += 10;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsewhitespace();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 34) {
                s6 = peg$c2;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsetext();
                if (s7 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 34) {
                    s8 = peg$c2;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c3); }
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsewhitespace();
                    if (s9 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 123) {
                        s10 = peg$c4;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c5); }
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parsewhitespace();
                        if (s11 !== peg$FAILED) {
                          s12 = [];
                          s13 = peg$parsepage();
                          while (s13 !== peg$FAILED) {
                            s12.push(s13);
                            s13 = peg$parsepage();
                          }
                          if (s12 !== peg$FAILED) {
                            s13 = peg$parsewhitespace();
                            if (s13 !== peg$FAILED) {
                              s14 = [];
                              s15 = peg$parsecomment();
                              while (s15 !== peg$FAILED) {
                                s14.push(s15);
                                s15 = peg$parsecomment();
                              }
                              if (s14 !== peg$FAILED) {
                                s15 = peg$parsewhitespace();
                                if (s15 !== peg$FAILED) {
                                  if (input.charCodeAt(peg$currPos) === 125) {
                                    s16 = peg$c6;
                                    peg$currPos++;
                                  } else {
                                    s16 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c7); }
                                  }
                                  if (s16 !== peg$FAILED) {
                                    s17 = peg$parsewhitespace();
                                    if (s17 !== peg$FAILED) {
                                      peg$savedPos = s0;
                                      s1 = peg$c8(s7, s12);
                                      s0 = s1;
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsepage() {
    let s0;

    const key = peg$currPos * 41 + 1;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parsepageWithDefault();
    if (s0 === peg$FAILED) {
      s0 = peg$parsepageWithoutDefault();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsepageWithDefault() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18;

    const key = peg$currPos * 41 + 2;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsewhitespace();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsecomment();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsecomment();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsewhitespace();
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c9) {
            s4 = peg$c9;
            peg$currPos += 4;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsewhitespace();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 34) {
                s6 = peg$c2;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsetext();
                if (s7 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 34) {
                    s8 = peg$c2;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c3); }
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsewhitespace();
                    if (s9 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 123) {
                        s10 = peg$c4;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c5); }
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parsewhitespace();
                        if (s11 !== peg$FAILED) {
                          s12 = [];
                          s13 = peg$parsesection();
                          while (s13 !== peg$FAILED) {
                            s12.push(s13);
                            s13 = peg$parsesection();
                          }
                          if (s12 !== peg$FAILED) {
                            s13 = peg$parsedefault();
                            if (s13 !== peg$FAILED) {
                              s14 = peg$parsewhitespace();
                              if (s14 !== peg$FAILED) {
                                s15 = [];
                                s16 = peg$parsecomment();
                                while (s16 !== peg$FAILED) {
                                  s15.push(s16);
                                  s16 = peg$parsecomment();
                                }
                                if (s15 !== peg$FAILED) {
                                  s16 = peg$parsewhitespace();
                                  if (s16 !== peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 125) {
                                      s17 = peg$c6;
                                      peg$currPos++;
                                    } else {
                                      s17 = peg$FAILED;
                                      if (peg$silentFails === 0) { peg$fail(peg$c7); }
                                    }
                                    if (s17 !== peg$FAILED) {
                                      s18 = peg$parsewhitespace();
                                      if (s18 !== peg$FAILED) {
                                        peg$savedPos = s0;
                                        s1 = peg$c11(s7, s12, s13);
                                        s0 = s1;
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsepageWithoutDefault() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    const key = peg$currPos * 41 + 3;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
